--- a/all info about css.html
+++ b/all info about css.html
@@ -2,3 +2,4 @@
 ** *** background image connection process in css file: background-image: url("images/dream-bg.png"); **
 ** background-repeat: no-repeat; একটা ছবি যেনো একবারের বেশি repeat না হয়। background-image দিলে bydefault দুইবার ছবি চলে
 আসে।
+***display: flex; এর মানে হলো ২ টা বা ৩ টা class যাই থাকুক না কেওন পাশাপাশি নিয়ে নিবে।
