--- a/all information link.html
+++ b/all information link.html
@@ -3,7 +3,7 @@ https://github.com/joshnh/Git-Commands
 ****https://photopea.com/
 (photopea.com)
 
-**google font. -> get font -> get embed code
+*google font website এ set করার নিয়মঃ *google font. -> get font -> get embed code
 **
 *** background image connection process in css file: background-image: url("images/dream-bg.png"); **
 
