--- a/all about git.html
+++ b/all about git.html
@@ -1,7 +1,7 @@
 ***** Create a new repository on the command line******
 
 echo "# tanjina" >> README.md
-git init (initial  করা )
+git init (initial করা )
 git add .md
 git commit -m " my first commit"
 
@@ -18,28 +18,29 @@ git remote add origin https://github.com/Alina081/tanjina.git
 git push -u origin main
 
 ****** New code add *****
-কোনো code line add করার পর  code git এ push করার process নিচে দেওয়া ..........
+কোনো code line add করার পর code git এ push করার process নিচে দেওয়া ..........
 git add .
 git commit -m"added header(কিছু একটা লিখলেই হবে)"
 git push
 
 *******comand prompt ****
-command prompt থেকে এক ধাপ উপরে উঠার নিয়মঃ 
-cd.. 
+command prompt থেকে এক ধাপ উপরে উঠার নিয়মঃ
+cd..
 cd file name
 git add .
 
 
 ****** github এ Page link করার নিয়ম (hosting) ******
 
-settings -> GitHub Pages or pages(left side  এ দেওয়া থাকবে)-> none দেওয়া থাকবে সেটাকে main করতে হবে
+settings -> GitHub Pages or pages(left side এ দেওয়া থাকবে)-> none দেওয়া থাকবে সেটাকে main করতে হবে
 
 *****************
-mouse এ right click করে inspect করলে নিচে একটা elements open হবে। <img src="Screenshot 2024-05-28 230935.png" alt=""> reload এর এখানে চাপ দিয়ে ধরে রাখতে হবে।তাহলে code এ কিছু করলে বা error থাকলে দেখতে পাব।
+mouse এ right click করে inspect করলে নিচে একটা elements open হবে। <img src="Screenshot 2024-05-28 230935.png" alt="">
+reload এর এখানে চাপ দিয়ে ধরে রাখতে হবে।তাহলে code এ কিছু করলে বা error থাকলে দেখতে পাব।
 
 
 ****************git repo change*********
-$ git remote set-url origin https://github.com/Alina081/alina.git (new repo create করলে) 
+$ git remote set-url origin https://github.com/Alina081/alina.git (new repo create করলে)
 
 
-***** search google -> git branch command  ***
+***** search google -> git branch command ***
