--- a/all information link.html
+++ b/all information link.html
@@ -14,3 +14,10 @@ https://github.com/joshnh/Git-Commands
 ** <!--target="_blank"এটা দেওয়ার কারনে linkঅন্য একটা new page এ open হবে            ।  -->
 
 <a class="hire-button" target="_blank" href="https://mail.google.com/mail/u/0/#inbox">Hire me</a>
+
+div*3 দিলে ৩ div টা হয়ে যাবে
+div*3>h2 তিনটা div বানাবো।প্রতিটা divএর মধ্যে h2 নিয়ে নিবে.
+div*3>h2{Room-$}+p{staying some one}
+
+Copy&paste: যেটা copy & pestকরতে চাই - Alt+Shift+down arrow দিলে copy paste হয়ে যাবে।
+--> Download Mp3:- Goat mp3_search on google)
